--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,4 +13,13 @@
     @apply px-6 py-2 border border-[#242424] rounded-full uppercase text-xs tracking-widest text-gray-500 transition-all
 	hover:border-[#F7AB0A]/40 hover:text-[#F7AB0A]/40;
   }
+
+  .contact-input {
+    @apply outline-none bg-slate-400/10 rounded-sm border-b border-[#242424] px-6 py-4 text-gray-500 placeholder-gray-500 transition-all 
+	focus:border-[#F7AB0A]/40 hover:border-[#F7AB0A]/40 focus:text-[#F7AB0A]/70;
+  }
+
+  .contact-btn {
+    @apply bg-[#F7AB0A] py-5 px-10 rounded-md text-black font-bold text-lg;
+  }
 } ;
